--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "flat": "^5.0.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-background-slider": "^2.0.0",
     "react-dom": "^17.0.1",
