--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-intl": "^5.10.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-stack-grid": "^0.7.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
