--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-background-slider": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-intl": "^5.10.6",
+    "react-phone-input-2": "^2.13.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-stack-grid": "^0.7.1",
