--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "@hookform/resolvers": "^1.3.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "flat": "^5.0.2",
+    "joi": "^17.3.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-background-slider": "^2.0.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.0",
     "react-intl": "^5.10.6",
     "react-phone-input-2": "^2.13.9",
     "react-router-dom": "^5.2.0",
