--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "nodemailer": "^6.5.0"
+    "nodemailer": "^6.5.0",
+    "path": "^0.12.7"
   }
 }
