--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
     "joi": "^17.3.0",
+    "joi-phone-number": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "nodemailer": "^6.5.0",
