--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,12 @@
     "react-hook-form": "^6.14.0",
     "react-intl": "^5.10.6",
     "react-phone-input-2": "^2.13.9",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-stack-grid": "^0.7.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
