--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi-phone-number": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
+    "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "path": "^0.12.7"
   }
