--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.1",
     "react-background-slider": "^2.0.0",
     "react-dom": "^17.0.1",
+    "react-easy-crop": "^3.3.2",
     "react-hook-form": "^6.14.0",
     "react-intl": "^5.10.6",
     "react-phone-input-2": "^2.13.9",
