--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^5.0.0-beta3",
     "flat": "^5.0.2",
     "joi": "^17.3.0",
     "jquery": "^3.5.1",
