--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-stack-grid": "^0.7.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
